<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_white"
    >
<!--    -->

    <fragment
        android:id="@+id/nav_white"
        android:name="com.example.lab4.ui.white.WhiteFragment"
        android:label="@string/menu_white"
        tools:layout="@layout/fragment_white"

        />

    <fragment
        android:id="@+id/nav_red"
        android:name="com.example.lab4.ui.red.RedFragment"
        android:label="@string/menu_red"
        tools:layout="@layout/fragment_red"
        />

    <fragment
        android:id="@+id/nav_orange"
        android:name="com.example.lab4.ui.orange.OrangeFragment"
        android:label="@string/menu_orange"
        tools:layout="@layout/fragment_orange"
        />

    <fragment
        android:id="@+id/nav_yellow"
        android:name="com.example.lab4.ui.yellow.YellowFragment"
        android:label="@string/menu_yellow"
        tools:layout="@layout/fragment_yellow"
        />

    <fragment
        android:id="@+id/nav_green"
        android:name="com.example.lab4.ui.green.GreenFragment"
        android:label="@string/menu_green"
        tools:layout="@layout/fragment_green" />

    <fragment
        android:id="@+id/nav_blue"
        android:name="com.example.lab4.ui.blue.BlueFragment"
        android:label="@string/menu_blue"
        tools:layout="@layout/fragment_blue" />

    <fragment
        android:id="@+id/nav_indigo"
        android:name="com.example.lab4.ui.indigo.IndigoFragment"
        android:label="@string/menu_indigo"
        tools:layout="@layout/fragment_indigo" />

    <fragment
        android:id="@+id/nav_violet"
        android:name="com.example.lab4.ui.violet.VioletFragment"
        android:label="@string/menu_violet"
        tools:layout="@layout/fragment_violet"
        />
</navigation>